# katapult

./: .gitignore
Haskell/: CHANGELOG.md  Haskell.cabal
Haskell/app/: App.hs  Main.hs
Haskell/test/: Tests.hs
Java/: build.gradle.kts
Java/src/main/java/fr/katas/: HelloWorld.java
Java/src/test/java/fr/katas/: HelloWorldTest.java
Javascript/: package-lock.json  package.json
Javascript/spec/hello-world/: HelloWorld.spec.js
Javascript/spec/helpers/: SpecHelper.js
Javascript/spec/support/: jasmine.json
Javascript/src/: HelloWorld.js
Kotlin/: build.gradle.kts
Kotlin/src/main/kotlin/fr/katas/: HelloWorld.kt
Kotlin/src/test/kotlin/fr/katas/: HelloWorldTest.kt
Python/app/: hello_world.py
Python/tests/: test_hello_world.py
PythonRemix/: shell.nix
Typescript/: package-lock.json
Typescript/spec/: HelloWorld.spec.ts
