cabal-version:      2.4
name:               Katapult
version:            0.1.0.0

author:             Laurent Bossavit
maintainer:         laurent.git@bossavit.com

extra-source-files: CHANGELOG.md

executable Haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite katapult-tests
    Type:                 exitcode-stdio-1.0
    Main-Is:              Tests.hs
    Build-depends:        Cabal, base, QuickCheck, hspec 
    hs-source-dirs:       app, test
